<resources>
    <string name="app_name">智能农业</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="item2_a">光照:</string>
    <string name="item2">光照强度</string>
    <string name="item2_0">当前光照强度:</string>
    <string name="item2_1">正常光照强度:</string>
    <string name="item2_2">光照强度值:</string>
    <string name="item2_3">光照强度当前状态:</string>
    <string name="item2_4">光照强度设置</string>
    <string name="item1_a">CO2详情</string>
    <string name="item1_0">CO2:</string>
    <string name="item1">CO2浓度</string>
    <string name="item1_1">当前CO2浓度：</string>
    <string name="item1_2">CO2浓度值:</string>
    <string name="item1_3">CO2浓度当前状态:</string>
    <string name="item1_4">CO2浓度设置</string>
    <string name="item1_5">CO2设定范围 :</string>
    <string name="item3_0">温度</string>
    <string name="item3_1">温度设定值：</string>
    <string name="item3_2">温度设定范围 :</string>
    <string name="item4_0">湿度</string>
    <string name="item4_1">湿度设定值：</string>
    <string name="item4_2">湿度设定范围 :</string>
    <string name="item5_0">空气指数</string>
    <string name="item6_0">土壤指数</string>
    <string name="setname">设定值</string>
    <string name="item7">空气温度设置</string>
    <string name="item7_1">当前空气温度：</string>
    <string name="item7_2">当前空气湿度：</string>
    <string name="item7_3">空气湿度值：</string>
    <string name="item7_4">空气湿度当前状态:</string>
    <string name="item7_5">空气温度值：</string>
    <string name="item7_6">空气温度当前状态:</string>
    <string name="item8">土壤温度设置</string>
    <string name="item8_a0">当前土壤温度：</string>
    <string name="item8_b0">当前土壤湿度：</string>
    <string name="item9">手动控制</string>
    <string name="dmin">最小值:</string>
    <string name="dmax">最大值:</string>
    <string name="dsure">确定</string>
    <string name="dset">欢迎您,请先设置服务器IP</string>
    <string name="dtitile">关于我们</string>
    <string name="dmove">退出登录</string>
    <string name="tip1">农业对于现在的人们来说是非常重要的，没有了农业，我们就是没有粮食，没有粮食我们就会被饿死。可见农业对于现在我们健康生活是至关重要的，与此同时...</string>
    <string name="tip2">在首页，可以实时查看沙盘中的各项参数</string>
    <string name="tip3">在设置栏目，可以手动打开沙盘内的设备，如风扇、水泵等来调节沙盘内的情况</string>
    <string name="tip4">在设置栏目里，可以通过设置参数阀值来改变状态</string>

</resources>
